# OPUS

./: .gitignore  LECENSE  README.md  ReadMe.txt  main.py  pyproject.toml  requirements.txt
docs/: IMPLEMENTATION_SUMMARY.md  ODE_SOLVER.md  QUICK_REFERENCE.md  README_SOLVER.md
examples/: cstr_end_to_end_simulation.ipynb  ode_solver_example.py
src/opus/: __init__.py
src/opus/analysis/: __init__.py  cstr_performance.py
src/opus/core/: __init__.py  configuration.py  constants.py  interfaces.py  parameters.py  results.py
src/opus/kinetics/: kinetics.py
src/opus/models/: cstr.py  state.py
src/opus/solvers/: __init__.py  ode_solver.py
tests/integration/: test_cstr_simulation.py  test_integration_cstr_performance.py
tests/unit/: test_configuration.py  test_cstr_performance.py  test_interfaces.py  test_kinetics.py  test_ode_solver.py  test_results.py  test_state.py
