[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opus"
version = "0.1.0"
description = "Open Process Uncertainty Simulator"
authors = [
    { name = "Vassilis Parisis" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "pydantic>=2",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "jupyterlab",
    "mypy",
    "pytest",
    "ruff",
    "twine",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

license = "MIT"